--- a/Gatherer/Gatherer.csproj
+++ b/Gatherer/Gatherer.csproj
@@ -8,6 +8,7 @@
     <NullableContextOptions>enable</NullableContextOptions>
     <AssemblyVersion>1.1.0.0</AssemblyVersion>
     <FileVersion>1.1.0.0</FileVersion>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
